Bug 257911 - [Cocoa] colorSpace values missing from videoTrack.configuration with MP4s missing explicit color information
Summary: [Cocoa] colorSpace values missing from videoTrack.configuration with MP4s mis...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-09 13:57 PDT by Jer Noble
Modified: 2023-06-09 23:23 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2023-06-09 13:57:10 PDT
[Cocoa] colorSpace values missing from videoTrack.configuration with MP4s missing explicit color information
Comment 1 Radar WebKit Bug Importer 2023-06-09 13:57:25 PDT
<rdar://problem/110545901>
Comment 2 Jer Noble 2023-06-09 13:59:54 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14824
Comment 3 EWS 2023-06-09 23:23:10 PDT
Committed 265053@main (41652ca1b8ff): <https://commits.webkit.org/265053@main>

Reviewed commits have been landed. Closing PR #14824 and removing active labels.