[Cocoa] colorSpace values missing from videoTrack.configuration with MP4s missing explicit color information https://bugs.webkit.org/show_bug.cgi?id=257911 rdar://110545901

Reviewed by Andy Estes.

Read the default colorspace values for a given codec and size from VideoToolbox.

* LayoutTests/media/track/video-track-configuration-mp4-default-colorspace-expected.txt: Added.
* LayoutTests/media/track/video-track-configuration-mp4-default-colorspace.html: Added.

Canonical link: https://commits.webkit.org/265053@main